[package]
name = "hcdev"
version = "0.1.0"
authors = [ "philipbeadle <philip.beadle@live.com.au>" ]

[dependencies]
holochain_core = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_dna = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
structopt = "0.2"
failure = "^0.1"
