[package]
name = "hcdev"
version = "0.1.0"
authors = [
  "philipbeadle <philip.beadle@live.com.au>",
  "Julian Laubstein <contact@julianlaubstein.de>",
  "Connor Turland <connorturland@gmail.com>"
  ]

[dependencies]
holochain_core = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
holochain_dna = { git = "https://github.com/holochain/holochain-rust", branch = "develop" }
structopt = "0.2"
failure = "^0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
semver = { version = "0.9.0", features = ["serde"] }
uuid = { version = "^0.6", features = ["v4", "serde"] }
assert_cmd = "0.9.0"
tempfile = "3"
base64 = "0.9"
dir-diff = "0.3.1"
colored = "1.6"
ignore = "0.4.3"
